<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff6f5"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/upper_bg"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#00e4ff">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="22dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/avatar_name"
            android:textSize="34sp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@id/upper_bg"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/white"
        android:layout_marginEnd="170dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="-120dp">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/cat" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="308dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="78dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="104dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="98dp"
            android:text="@string/hobby1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:text="@string/hobby2"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:text="@string/hobby3"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="283dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="26dp"
        android:backgroundTint="#00e4ff"
        android:text="@string/button_text"
        android:textColor="#000000"
        android:textSize="20sp" />

</RelativeLayout>